🌟 Updating notes